--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,15 +1,45 @@
 version: 2.1
 
+setup: true
+ 
+orbs:
+  continuation: circleci/continuation@0.1.2
+
 jobs:
-  build:
+  setup:
     docker:
-      - image: cimg/base:2021.07
+     - image: cimg/base:2021.07
     steps:
       - checkout
-      - run: echo "test"
+      - run:
+          name: Install necessary binaries
+          command: |
+            sudo apt-get update
+            sudo apt install default-jre
+      - run:
+          name: Create unique context and pass it to continuation config
+          command: |
+            # generate context name and pass it to API to create that context
+            CONTEXT_NAME="context-$CIRCLE_WORKFLOW_ID"
+            data=$(cat \<<EOD
+             {"name": "$CONTEXT_NAME", "owner": {"slug": "gh/orgnamehere"}}
+            EOD)
+            CONTEXT_ID=$(curl -X POST -H Content-Type:application/json -H circle-token:$CIRCLE_TOKEN https://circleci.com/api/v2/context -d "$data" | jq -r '.id')
+            
+            # create parameters json to pass to continuation workflow
+            json=$(cat \<<EOD
+             { "context-id": "$CONTEXT_ID", "context-name": "$CONTEXT_NAME"}
+            EOD)
+            echo $json >> /home/circleci/test.json
+            
+            # create var inside of context via the API
+            curl -X PUT -H Content-Type:application/json -H circle-token:$CIRCLE_TOKEN https://circleci.com/api/v2/context/$CONTEXT_ID/environment-variable/foobar -d '{"value": "FOOBAR"}'
+      - run: cat /home/circleci/test.json
+      - continuation/continue:
+          configuration_path: ".circleci/continuation-config.yml"
+          parameters: /home/circleci/test.json
 
 workflows:
-  workflow1:
+  setup:
     jobs:
-      - build
- 
+      - setup
